Replace gruvbox by base16.solarized

--- a/_sass/scaffold/_highlight-light.scss
+++ b/_sass/scaffold/_highlight-light.scss
@@ -1,84 +1,80 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
-  color: #282828;
-  background-color: #fbf1c7;
+  color: #586e75;
 }
 .highlight .err {
-  color: #9d0006;
-  background-color: #fbf1c7;
-  font-weight: bold;
+  color: #002b36;
+  background-color: #dc322f;
 }
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
-  color: #928374;
-  font-style: italic;
+  color: #657b83;
 }
 .highlight .cp {
-  color: #427b58;
+  color: #b58900;
 }
 .highlight .nt {
-  color: #9d0006;
+  color: #b58900;
 }
 .highlight .o, .highlight .ow {
-  color: #282828;
+  color: #93a1a1;
 }
 .highlight .p, .highlight .pi {
-  color: #282828;
+  color: #93a1a1;
 }
 .highlight .gi {
-  color: #79740e;
-  background-color: #fbf1c7;
+  color: #859900;
 }
 .highlight .gd {
-  color: #9d0006;
-  background-color: #fbf1c7;
+  color: #dc322f;
 }
 .highlight .gh {
-  color: #79740e;
+  color: #268bd2;
+  background-color: #002b36;
   font-weight: bold;
 }
 .highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
-  color: #9d0006;
+  color: #6c71c4;
 }
 .highlight .kc {
-  color: #8f3f71;
+  color: #cb4b16;
 }
 .highlight .kt {
-  color: #b57614;
+  color: #cb4b16;
 }
 .highlight .kd {
-  color: #af3a03;
+  color: #cb4b16;
 }
-.highlight .s, .highlight .sa, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
-  color: #79740e;
-  font-style: italic;
+.highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
+  color: #859900;
 }
-.highlight .si {
-  color: #79740e;
-  font-style: italic;
+.highlight .sa {
+  color: #6c71c4;
 }
 .highlight .sr {
-  color: #79740e;
-  font-style: italic;
+  color: #2aa198;
+}
+.highlight .si {
+  color: #d33682;
 }
 .highlight .se {
-  color: #af3a03;
+  color: #d33682;
 }
 .highlight .nn {
-  color: #427b58;
+  color: #b58900;
 }
 .highlight .nc {
-  color: #427b58;
+  color: #b58900;
 }
 .highlight .no {
-  color: #8f3f71;
+  color: #b58900;
 }
 .highlight .na {
-  color: #79740e;
+  color: #268bd2;
 }
 .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
-  color: #8f3f71;
+  color: #859900;
 }
 .highlight .ss {
-  color: #076678;
+  color: #859900;
 }
