--- a/_sass/scaffold/_toc.scss
+++ b/_sass/scaffold/_toc.scss
@@ -29,7 +29,7 @@
     display: block;
     border-bottom: 1px solid var(--border-color);
 
-    color: inherit;
+    color: var(--body-color-light);
 
     &:hover,
     &:focus {
