--- a/_sass/scaffold/_post.scss
+++ b/_sass/scaffold/_post.scss
@@ -109,3 +109,11 @@
   margin: 0 .25em .25em -1em;
   vertical-align: middle;
 }
+
+img.emoji {
+  display: inline;
+  margin: 0;
+  width: 1.25em;
+  height: 1.25em;
+  vertical-align: middle;
+}
