--- a/_sass/scaffold/_layout.scss
+++ b/_sass/scaffold/_layout.scss
@@ -29,7 +29,7 @@
     width: 22.5%;
     height: 100vh;
     padding: var(--spacer);
-    background-color: var(--code-bg);
+    background-color: var(--body-fg);
   }
 }
 
