--- a/_sass/scaffold/_toc.scss
+++ b/_sass/scaffold/_toc.scss
@@ -5,7 +5,7 @@
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
   padding: .2em;
-  background-color: var(--code-bg);
+  background-color: var(--body-fg);
 }
 
 .toc,
