--- a/_sass/scaffold/_variables.scss
+++ b/_sass/scaffold/_variables.scss
@@ -21,25 +21,27 @@ $xl-screen: 80rem;
    *  ─────────────────────────────────── */
   
   --body-bg: var(--oc-white);
-  --code-bg: var(--oc-gray-1);
+  --body-fg: var(--oc-gray-1);
+  --code-bg: var(--oc-gray-2);
 
-  --border-color: rgb(var(--oc-gray-5-rgb), .6);
+  --border-color: rgb(var(--oc-gray-5-rgb), .5);
   --body-color-light: var(--oc-gray-6);
-  --body-color: var(--oc-gray-8);
+  --body-color: var(--oc-gray-9);
   --heading-color: var(--oc-black);
 
   --link-color-light: var(--oc-blue-6);
-  --link-color: var(--oc-blue-8);
+  --link-color: var(--oc-blue-9);
 
-  --mark-color: var(--oc-yellow-8);
+  --mark-color: var(--oc-yellow-9);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --body-bg: var(--oc-gray-9);
+    --body-bg: #121212;
+    --body-fg: var(--oc-gray-9);
     --code-bg: var(--oc-gray-8);
 
-    --border-color: rgb(var(--oc-gray-7-rgb), .8);
+    --border-color: rgb(var(--oc-gray-7-rgb), .5);
     --body-color-light: var(--oc-gray-6);
     --body-color: var(--oc-gray-4);
     --heading-color: var(--oc-white);
