--- a/_sass/scaffold/_header.scss
+++ b/_sass/scaffold/_header.scss
@@ -3,6 +3,10 @@
   margin-bottom: var(--spacer-3);
 }
 
+.avatar {
+  display: none;
+}
+
 .masthead-title {
   font-size: 120%;
   font-weight: bold;
@@ -48,6 +52,13 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+  }
+
+  .avatar {
+    display: block;
+    width: 25%;
+    border-radius: 50%;
+    margin: 0 auto var(--spacer-2) auto;
   }
 
   .masthead-title {
